--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,12 @@ hs_err_pid*
 */target/**
 **/META-INF/
 !.mvn/wrapper/maven-wrapper.jar
-
+target
+test-output
+test-output-tests
+testng.iml
+z_build
+.DS_Store
 
 ## Eclipse
 ##############################
